--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
             <li class="nav-item"><a href="./page/fan3d.html" class="nav-link">折叠扇子</a></li>
             <li class="nav-item"><a href="./page/loading.html" class="nav-link">加载中</a></li>
             <li class="nav-item"><a href="./page/right-nav.html" class="nav-link">右侧导航</a></li>
+            <li class="nav-item"><a href="./page/copper.html" class="nav-link">铜钱</a></li>
         </ul>
         <script src="./js/main.js"></script>
     </body>
