--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
             <li class="nav-item"><a href="./page/loading.html" class="nav-link">加载中</a></li>
             <li class="nav-item"><a href="./page/right-nav.html" class="nav-link">右侧导航</a></li>
             <li class="nav-item"><a href="./page/copper.html" class="nav-link">铜钱</a></li>
+            <li class="nav-item"><a href="./page/letter.html" class="nav-link">字节挑动</a></li>
         </ul>
         <script src="./js/main.js"></script>
     </body>
