--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>CSS样式案例</title>
         <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css//home.css">
     </head>
     <body>
         <h1 class="main-head">CSS样式案例</h1>
