新增不常用且实用的CSS样式

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
     <body>
         <h1 class="main-head">CSS样式案例</h1>
         <ul class="nav-list">
+            <li class="nav-item"><a href="./page/practical.html" class="nav-link">不常用且实用的CSS样式</a></li>
+        </ul>
+        <ul class="nav-list">
             <li class="nav-item"><a href="./page/cube3d.html" class="nav-link">旋转盒子</a></li>
             <li class="nav-item"><a href="./page/fan3d.html" class="nav-link">折叠扇子</a></li>
             <li class="nav-item"><a href="./page/loading.html" class="nav-link">加载中</a></li>
