圆环加载中动画

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
             <li class="nav-item"><a href="./page/cube3d.html" class="nav-link">旋转盒子</a></li>
             <li class="nav-item"><a href="./page/fan3d.html" class="nav-link">折叠扇子</a></li>
             <li class="nav-item"><a href="./page/loading.html" class="nav-link">加载中</a></li>
+            <li class="nav-item"><a href="./page/loading-2.html" class="nav-link">圆环加载中</a></li>
             <li class="nav-item"><a href="./page/right-nav.html" class="nav-link">右侧导航</a></li>
             <li class="nav-item"><a href="./page/copper.html" class="nav-link">铜钱</a></li>
             <li class="nav-item"><a href="./page/letter.html" class="nav-link">字节挑动</a></li>
