--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <li class="nav-item"><a href="./page/loading.html" class="nav-link">加载中</a></li>
             <li class="nav-item"><a href="./page/loading-2.html" class="nav-link">圆环加载中</a></li>
             <li class="nav-item"><a href="./page/right-nav.html" class="nav-link">右侧导航</a></li>
-            <li class="nav-item"><a href="./page/nav-hover.html" class="nav-link">导航高亮</a></li>
+            <li class="nav-item"><a href="./page/nav-hover.html" class="nav-link">导航滑条</a></li>
             <li class="nav-item"><a href="./page/copper.html" class="nav-link">铜钱</a></li>
             <li class="nav-item"><a href="./page/letter.html" class="nav-link">字节挑动</a></li>
             <li class="nav-item"><a href="./page/radar.html" class="nav-link">雷达纹</a></li>
