新增文本下划线动画效果

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
             <li class="nav-item"><a href="./page/letter.html" class="nav-link">字节挑动</a></li>
             <li class="nav-item"><a href="./page/radar.html" class="nav-link">雷达纹</a></li>
             <li class="nav-item"><a href="./page/text-overflow.html" class="nav-link">多行文本溢出省略</a></li>
+            <li class="nav-item"><a href="./page/link-decoration.html" class="nav-link">文本下划线动画</a></li>
         </ul>
         <script src="./js/main.js"></script>
     </body>
